@@ -4,6 +4,7 @@
 * added location inforamtion for all exception classes (new c-tor has been added).
 * exceptions can now return their name (via RTTI) with getTypeName().
 * fixed Backtrace's tests (tail-recursion on newer gcc versions).
+* fixed race condition when initializing Singleton from multiple threads.
 
 -- v0.5.0 --
 * *Enum::toInt() is now standard.
